// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extraTask 1`] = `
"// In this file, all Page components from 'src/pages' are auto-imported.

import { canHandleRoute, getRoutingComponent } from 'supertokens-auth-react/ui'

import { Router, Route } from '@redwoodjs/router'

import { useAuth, PreBuiltUI } from './auth'

const Routes = () => {
  if (canHandleRoute(PreBuiltUI)) {
    return getRoutingComponent(PreBuiltUI)
  }

  return (
    <Router useAuth={useAuth}>
      <Route path="/login" page={LoginPage} name="login" />
      <Route path="/signup" page={SignupPage} name="signup" />
      <Route notfound page={NotFoundPage} />
    </Router>
  )
}

export default Routes
"
`;

exports[`extraTask already setup 1`] = `
"// In this file, all Page components from 'src/pages' are auto-imported.

import SuperTokens from 'supertokens-auth-react'

import { Router, Route } from '@redwoodjs/router'

import { useAuth } from './auth'

const Routes = () => {
  if (SuperTokens.canHandleRoute()) {
    return SuperTokens.getRoutingComponent()
  }

  return (
    <Router useAuth={useAuth}>
      <Route path="/login" page={LoginPage} name="login" />
      <Route path="/signup" page={SignupPage} name="signup" />
      <Route notfound page={NotFoundPage} />
    </Router>
  )
}

export default Routes
"
`;
